--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,88 @@
-dash
-dash_core_components
-dash_html_components
-plotly
-gunicorn
-OpenFisca-France >= 21.0, < 22.0
-toolz >= 0.9, < 0.10
+astroid==1.6.5
+atomicwrites==1.1.5
+attrs==18.1.0
+autopep8==1.3.5
+Babel==2.6.0
+backcall==0.1.0
+Biryani==0.10.8
+bleach==2.1.3
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+dash==0.21.1
+dash-core-components==0.23.0
+dash-html-components==0.11.0
+dash-renderer==0.13.0
+decorator==4.3.0
+dpath==1.4.0
+entrypoints==0.2.3
+enum34==1.1.6
+Flask==0.12
+Flask-Compress==1.4.0
+Flask-Cors==3.0.2
+future==0.16.0
+gunicorn==19.8.1
+html5lib==1.0.1
+idna==2.7
+ipdb==0.11
+ipykernel==4.8.2
+ipython==6.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
+isodate==0.6.0
+isort==4.3.4
+itsdangerous==0.24
+jedi==0.12.0
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
+mistune==0.8.3
+more-itertools==4.2.0
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.5.0
+numpy==1.14.5
+OpenFisca-Core==23.1.2
+OpenFisca-France==21.10.9
+pandas==0.23.1
+pandocfilters==1.4.2
+parso==0.2.1
+pexpect==4.6.0
+pickleshare==0.7.4
+plotly==2.7.0
+pluggy==0.6.0
+prompt-toolkit==1.0.15
+psutil==5.4.2
+ptyprocess==0.5.2
+py==1.5.3
+pycodestyle==2.4.0
+Pygments==2.2.0
+pylint==1.9.2
+pytest==3.6.1
+python-dateutil==2.7.3
+pytz==2018.4
+PyYAML==3.12
+pyzmq==17.0.0
+qtconsole==4.3.1
+requests==2.19.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+six==1.11.0
+sortedcontainers==1.5.9
+terminado==0.8.1
+testpath==0.3.1
+toolz==0.9.0
+tornado==5.0.2
+traitlets==4.3.2
+urllib3==1.23
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.2.1
+wrapt==1.10.11
